trading.log
  File "/home/runner/work/Whatman42/Whatman42/main.py", line 1111
    raise ValueError("Kolom 'tanggal' tidak ditemukan dalam log data!")
    ^
IndentationError: expected an indented block after 'if' statement on line 1110
